# fullstack

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  README.md  TEMPLATE_READINESS_REVIEW.md  docker-bake.hcl  docker-compose.yml  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: backend.yml  container-scan.yml  docker-push.yml  frontend.yml  openapi-drift.yml
backend/: Cargo.toml  clippy.toml  deny.toml  openapi.json  rustfmt.toml
backend/.cargo/: audit.toml
backend/config/: default.yaml  local.example.yaml
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs  loader.rs  validation.rs
backend/crates/dto/: Cargo.toml
backend/crates/dto/src/: error.rs  health.rs  lib.rs  pagination.rs  user.rs
backend/crates/grpc/: Cargo.toml  build.rs
backend/crates/grpc/src/: auth.rs  health.rs  lib.rs  main.rs  proto.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: health_checker.rs  lib.rs  startup.rs  telemetry.rs
backend/crates/infra/src/audit/: mod.rs  otel_logs.rs  proxy.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/migrations/mssql/: V1__init.sql
backend/crates/migration/migrations/postgres/: V1__init.sql
backend/crates/migration/src/: lib.rs  main.rs
backend/crates/model/: Cargo.toml
backend/crates/model/src/: lib.rs  role.rs  user.rs  user_identity.rs
backend/crates/repo/: Cargo.toml
backend/crates/repo/src/: connection.rs  error.rs  health.rs  lib.rs
backend/crates/repo/src/user_repo/: any.rs  mod.rs  mssql.rs  postgres.rs  test_helpers.rs  trait.rs
backend/crates/repo/tests/: mssql_test.rs  postgres_test.rs
backend/crates/server/: Cargo.toml  build.rs  greetings_descriptor
backend/crates/server/src/: audit.rs  bootstrap.rs  error.rs  grpc.rs  health_checker.rs  lib.rs  main.rs  openapi.rs  problem.rs  rest_server.rs  state.rs  telemetry.rs
backend/crates/server/src/audit/: otel_logs.rs  syslog.rs
backend/crates/server/src/authz/: domain.rs
backend/crates/server/src/handlers/: health.rs  users.rs
backend/crates/server/src/middleware/: authz.rs  mod.rs  oidc.rs
backend/crates/server/src/middleware/authz/: layer.rs  mod.rs
backend/crates/server/src/middleware/oidc/: client.rs  layer.rs  mod.rs  validator.rs
backend/crates/server/tests/: authz.rs  health.rs  integration_test.rs  problem_response.rs  users.rs
backend/crates/server/tests/common/: mod.rs
backend/crates/svc/: Cargo.toml
backend/crates/svc/src/: audit.rs  error.rs  health.rs  lib.rs  policy.rs  user_service.rs
backend/crates/svc/src/audit/: channel.rs  event.rs  mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend
docker/dev/: docker-compose.yml
docker/dev/dex/: config.yaml
docker/dex/: config.yaml
docs/: how-to-add-feature.md  openapi.json
docs/adr/: 0001-transaction-boundary-in-jit-provisioning.md
frontend/: .env.example  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: example.test.ts  features.test.ts  setup.ts
frontend/__tests__/api/: parse.test.ts  server.test.ts
frontend/__tests__/api/users/: client.test.ts  server.test.ts
frontend/__tests__/auth/: config.test.ts  session.test.ts
frontend/__tests__/hooks/: users.test.ts
frontend/__tests__/routes/: protected.test.ts
frontend/__tests__/schemas/: users.test.ts
frontend/__tests__/types/: api.test.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/api/proxy/[[...path]]/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx  sign-out-button.tsx
frontend/src/app/dashboard/users/[id]/: page.tsx
frontend/src/app/dashboard/users/[id]/edit/: page.tsx
frontend/src/app/dashboard/users/new/: page.tsx
frontend/src/components/features/: auth-error.tsx  dashboard-shell.tsx
frontend/src/components/features/users/: dashboard-overview.tsx  user-form.tsx  users-table.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  error-state.tsx  skeleton.tsx
frontend/src/hooks/: useRole.ts  useUsers.ts
frontend/src/lib/api/: client.ts  fetcher.ts  index.ts  parse.ts  schema.d.ts  schema.zod.ts  server.ts  types.ts  users.ts
frontend/src/lib/api/users/: client.ts  server.ts
frontend/src/lib/auth/: config.ts  index.ts  types.ts
frontend/src/schemas/: index.ts
frontend/src/styles/: globals.css
k8s/helm/fullstack-template/: Chart.yaml  values.yaml
k8s/helm/fullstack-template/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  secret.yaml
proto/greetings/v1/: greetings_service.proto
proto/health/v1/: health_service.proto
proto/users/v1/: users_service.proto
scripts/: helm-smoke-test.sh
