[package]
name = "grpc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grpc-server"
path = "src/main.rs"

[dependencies]
svc = { path = "../svc" }
repo = { path = "../repo" }
model = { path = "../model" }
dto = { path = "../dto" }
config = { path = "../config" }
migration = { path = "../migration" }
tonic.workspace = true
tonic-health.workspace = true
tonic-prost = "0.14"
prost.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
snafu.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
