[package]
name = "infra"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
svc = { path = "../svc" }
repo = { path = "../repo" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
uuid.workspace = true
reqwest.workspace = true
snafu.workspace = true

[dev-dependencies]
axum.workspace = true
