[package]
name = "migration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
refinery.workspace = true
tokio-postgres.workspace = true
tiberius.workspace = true
tokio-util.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
