[package]
name = "migration"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
refinery.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
tiberius.workspace = true
tokio-util.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
