[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
svc = { path = "../svc" }
repo = { path = "../repo" }
model = { path = "../model" }
dto = { path = "../dto" }
config = { path = "../config" }
migration = { path = "../migration" }
axum.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = [
  "trace",
  "grpc-tonic",
  "http-proto",
  "reqwest-client",
] }
opentelemetry_sdk.workspace = true
jsonwebtoken.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
snafu.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
uuid.workspace = true
clap.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-prost = "0.14"
prost.workspace = true
tokio-stream = "0.1"
axum-prometheus = "0.10"

[build-dependencies]
tonic-prost-build.workspace = true
