[package]
name = "svc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repo = { path = "../repo" }
model = { path = "../model" }
dto = { path = "../dto" }
config = { path = "../config" }
async-trait.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
repo = { path = "../repo", features = ["test-helpers"] }
tokio = { workspace = true, features = ["macros", "rt"] }
time.workspace = true
